# WhittedRT

./: .gitignore  CMakeLists.txt  LICENSE.MD  Normal.cpp  Point.cpp  README.md  test1.cpp  todo.txt
include/: AmbientLight.h  BVH.h  BasicDiffuseShading.h  BoundingBox.h  Camera.h  CameraInterface.h  Canvas.h  Color.h  Cone.h  Cylinder.h  DirectionalLight.h  Globals.h  HammersleySampler.h  Instance.h  JitteredSampler.h  Light.h  Material.h  Matrix.h  Mesh.h  Normal.h  OBJParser.h  OrthographicCamera.h  Plane.h  Point.h  PointLight.h  ProjectiveCamera.h  RandomSampler.h  Ray.h  RegularSampler.h  Sampler.h  SceneParser.h  ShadeContext.h  Shape.h  ShapeInterface.h  Sphere.h  Texture.h  ThreadPool.h  Transformation.h  Transformations.h  Triangle.h  (+5 more)
scenes/: BVHTestScene.h  BVHTestScene.xml  BoundingBoxTestScene.h  BoundingBoxTestScene.xml  CessnaScene.h  CessnaScene.xml  Scene1.h  SingleSphere.xml  SingleSphereLit.xml  scene.xml
src/: AmbientLight.cpp  BVH.cpp  BasicDiffuseShading.cpp  BoundingBox.cpp  Camera.cpp  Canvas.cpp  Color.cpp  Cone.cpp  Cylinder.cpp  DirectionalLight.cpp  HammersleySampler.cpp  Instance.cpp  JitteredSampler.cpp  Material.cpp  Matrix.cpp  Mesh.cpp  Normal.cpp  OBJParser.cpp  OrthographicCamera.cpp  Plane.cpp  Point.cpp  PointLight.cpp  ProjectiveCamera.cpp  RandomSampler.cpp  Ray.cpp  RegularSampler.cpp  SceneParser.cpp  ShadeContext.cpp  Sphere.cpp  Texture.cpp  ThreadPool.cpp  Transformation.cpp  Triangle.cpp  Tuple.cpp  Vector.cpp  World.cpp  XMLParser.cpp  main.cpp
test/: HammersleyTest.cpp  SphereTest.cpp  TransformationTest.cpp  TriangleTest.cpp  VectorTest.cpp  XMLTest.cpp
